@@ -1,3 +1,6 @@
+Wed Nov 14 14:01:21 CET 2018
+	Fix build issue with GnuTLS < 3.0. -CG
+
 Mon Nov 12 19:50:43 CET 2018
 	Fix #5473 (test case failure due to change in libcurl). -eworm
 
